LATEST UPDATES - 01 Februari 2026 (Part 2)
==============================

1. FITUR RESUME TEST (LOCAL PERSISTENCE)
   - Implementasi penyimpanan otomatis progres tes (jawaban dan waktu) menggunakan Pinia & LocalStorage.
   - Menambahkan banner "Melanjutkan dari progres terakhir" saat sesi dipulihkan.
   - Dashboard (HeroSection) sekarang mendeteksi sesi aktif:
     - Tombol "Lanjutkan Tes" aktif jika ada riwayat.
     - Tombol "Mulai Tes Baru" menampilkan konfirmasi jika ada riwayat aktif.
   - Sesi otomatis dibersihkan saat tes selesai disubmit.
   - Unit test ditambahkan untuk memverifikasi logika persistensi store.
   - File yang disentuh:
     - nuxt-fe/stores/testSessionStore.ts
     - nuxt-fe/pages/test/[id].vue
     - nuxt-fe/components/DashboardUser/heroSection.vue
     - nuxt-fe/tests/resumeSession.test.ts

Timestamp: 2026-02-01 19:42:00

LATEST UPDATES - 01 Februari 2026
==============================

1. INTEGRASI PWA (PROGRESSIVE WEB APP)
   - Menambahkan modul `@vite-pwa/nuxt` untuk dukungan PWA.
   - Konfigurasi manifest PWA dengan ikon kustom (192x192, 512x512).
   - Implementasi caching strategy menggunakan Workbox untuk aset statis.
   - Menambahkan folder `public/icons` untuk aset PWA.
   - Membuat unit test untuk memastikan konfigurasi PWA valid.
   - File yang disentuh:
     - nuxt-fe/nuxt.config.ts
     - nuxt-fe/package.json
     - nuxt-fe/public/icons/pwa-192x192.png
     - nuxt-fe/public/icons/pwa-512x512.png
     - nuxt-fe/tests/pwa.test.ts
   - Mengoptimalkan konfigurasi Workbox untuk menghilangkan peringatan build di mode development.
2. PERBAIKAN URL AVATAR & DEPLOYMENT
   - Memperbaiki logika `getAvatarUrl` di `BatchParticipants.vue` agar lebih fleksibel dengan path langsung.
   - Menambahkan `MEDIA_URL` pada Github Action `deploy-toafl.yml` untuk sinkronisasi konfigurasi production.
   - Menambahkan `MEDIA_URL` ke `runtimeConfig` di `nuxt.config.ts` (sudah tersedia).
   - File yang disentuh: